# ai-intuition

./: .gitignore  .nojekyll  .pre-commit-config.yaml  Makefile  README.md  _quarto.yml  _redirects  index.html  listings.json  mise.toml  pyproject.toml  requirements.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
_extensions/shafayetShafee/add-code-files/: _extension.yml  add-code-files.lua
_site/: _redirects  about.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
_site/about/: index.html
_site/blog/: index.html
_site/blog/draft/kan/: index.html
_site/blog/posts/kan/: index.html
_site/blog/posts/mamba/: index.html
_site/blog/posts/welcome/: index.html
_site/posts/kan/: index.html
_site/posts/post-with-code/: index.html
_site/posts/welcome/: index.html
_site/projects/: index-python.xml  index.html  index.qmd  index.xml
_site/projects/bigT_ros_control/: index.html
_site/projects/crane_plus_motion_planning/: index.html
_site/projects/draft/crane_plus_motion_planning/: index.html
_site/projects/posts/bigT_ros_control/: index.html
_site/projects/posts/eco-retrofit-ai/: index.html
_site/projects/wood/: index.html
_site/site_libs/bootstrap/: bootstrap-f4d5c2d6f3dd4736bcfaeccb02b332b2.min.css  bootstrap.min.css
about/: index.html  index.qmd
blog/: _metadata.yml  index.html  index.qmd
blog/draft/kan/: index.html  index.qmd
blog/posts/: _metadata.yml
blog/posts/kan/: index.html
blog/posts/mamba/: dplr.drawio  index.html  index.qmd  references.bib
projects/: _metadata.yml  index-python.xml  index.html  index.qmd  index.xml
projects/bigT_ros_control/: control.cpp  index.html  index.qmd  kinematics.drawio
projects/crane_plus_motion_planning/: index.html  index.qmd
projects/draft/crane_plus_motion_planning/: index.html  index.qmd
projects/posts/bigT_ros_control/: index.html  index.qmd
projects/posts/eco-retrofit-ai/: index.html  index.qmd
site_libs/bootstrap/: bootstrap.min.css
